# opra

./: .gitignore  Dockerfile.windows  README.md  SIGNING-UPDATED.md  SIGNING.md  build-cross-platform.sh  build.bat  build.sh  docker-build.sh
.github/: README.md
.github/workflows/: build.yml  release-signed.yml  release-simple.yml  release.yml
Opra/: ContentView.swift  Info.plist  OllamaTTSManager.swift  Opra.entitlements  OpraApp.swift  PDFTextExtractor.swift  PDFViewRepresentable.swift  SettingsManager.swift  TTSProvider.swift  TextToSpeechManager.swift
Opra.xcodeproj/: project.pbxproj
Opra/Assets.xcassets/AccentColor.colorset/: Contents.json
Opra/Assets.xcassets/AppIcon.appiconset/: Contents.json
Opra/Views/: OllamaSetupView.swift  PDFViewerView.swift  SettingsView.swift  VoicePickerView.swift
macos/: ExportOptions.plist  README.md
macos/Opra/: OllamaTTSManager.swift  Opra.entitlements  OpraApp.swift  TTSProviderManager.swift  TextToSpeechManager.swift
macos/Opra/Views/: OllamaSetupView.swift  SettingsView.swift
shared/: CMakeLists.txt  Opra.Shared.csproj  PDFTextExtractor.cs  TextToSpeech.cs
shared/include/: PDFTextExtractor.h  TextToSpeech.h
shared/src/: PDFTextExtractor.cpp  PDFTextExtractor_Windows.cpp  PDFTextExtractor_macOS.cpp  TextToSpeech.cpp  TextToSpeech_Windows.cpp  TextToSpeech_macOS.cpp
windows/: Opra.sln
windows/Opra/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Opra.csproj  PDFTextExtractor.cs  TextToSpeech.cs  app.manifest
